fixed row spacing and condensed column css

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -1294,8 +1294,7 @@ h2.carousel-overlay:before {
 /* PARAGRAPH BOX
 =============================================== */  
 .paragraph--type--box-styles {
-    padding-bottom: 10px;
-    padding-top: 5px;
+    padding-bottom: 30px;
 }
 .overlay {
   position: relative;
@@ -1451,7 +1450,7 @@ h2.carousel-overlay:before {
     .paragraph--type--bp-columns__3col, .paragraph--type--bp-columns__4col,
     .paragraph--type--bp-columns__5col, .paragraph--type--bp-columns__6col {
         &:nth-child(2){
-            padding-right:15px!important;
+            padding-right:30px!important;
         }
     }
     .paragraph--type--bp-columns__3col, .paragraph--type--bp-columns__4col,
@@ -1463,7 +1462,7 @@ h2.carousel-overlay:before {
     .paragraph--type--bp-columns__4col, .paragraph--type--bp-columns__5col, .paragraph--type--bp-columns__6col {
         &:nth-child(4){
             padding-left:0px!important;
-            padding-right:15px!important;
+            padding-right:30px!important;
         }
     }
     .paragraph--type--bp-columns__6col {
@@ -1480,186 +1479,26 @@ h2.carousel-overlay:before {
     }
 }
 
-
-
  /* Columns Modifiers inside of Columns Element  */
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__6col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
+
 @media (min-width: 768px) {
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__3col,
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__4col,
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__5col, 
   .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__6col {
     float: left;
      width: 50%; /*width: 16.66666667%;*/
   }
 }
 @media (min-width: 1220px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__6col {
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__3col,
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__4col,
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__5col, 
+  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__6col  {
     float: left;
      width: 33.33333333%; /*width: 16.66666667%;*/
   }
 }
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__5col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__5col {
-    float: left;
-    width: 50%; /*width: 20%;*/
-  }
-}
-@media (min-width: 1220px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__5col {
-    float: left;
-     width: 33.33333333%; /*width: 16.66666667%;*/
-  }
-}
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__4col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__4col {
-    float: left;
-    width: 50%; /*width: 25%;*/
-  }
-}
-@media (min-width: 1220px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__4col {
-    float: left;
-     width: 33.33333333%; /*width: 16.66666667%;*/
-  }
-}
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__3col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__3col {
-    float: left;
-    width: 50%; /*width: 33.33333333%;*/
-  }
-}
-@media (min-width: 1220px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__3col {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__2col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__2col {
-    float: left;
-    width: 50%;
-  }
-}
-.paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__1col {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph.paragraph--type--bp-columns .paragraph--type--bp-columns__1col {
-    float: left;
-    width: 100%;
-  }
-}
-/* These allow us to change the width on a single paragraph in a Multicolumn. */
-.paragraph--type--bp-columns__1col .paragraph.paragraph--width--tiny > .paragraph__column {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--tiny > .paragraph__column {
-    float: left;
-    width: 33.33333333%;
-  }
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--tiny > .paragraph__column {
-    margin-left: 33.33333333%;
-  }
-}
-.paragraph--type--bp-columns__1col .paragraph.paragraph--width--narrow > .paragraph__column {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--narrow > .paragraph__column {
-    float: left;
-    width: 50%;
-  }
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--narrow > .paragraph__column {
-    margin-left: 25%;
-  }
-}
-.paragraph--type--bp-columns__1col .paragraph.paragraph--width--medium > .paragraph__column {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--medium > .paragraph__column {
-    float: left;
-    width: 66.66666667%;
-  }
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--medium > .paragraph__column {
-    margin-left: 16.66666667%;
-  }
-}
-.paragraph--type--bp-columns__1col .paragraph.paragraph--width--wide > .paragraph__column {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--wide > .paragraph__column {
-    float: left;
-    width: 83.33333333%;
-  }
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--wide > .paragraph__column {
-    margin-left: 8.33333333%;
-  }
-}
-.paragraph--type--bp-columns__1col .paragraph.paragraph--width--full > .paragraph__column {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .paragraph--type--bp-columns__1col .paragraph.paragraph--width--full > .paragraph__column {
-    float: left;
-    width: 100%;
-  }
-}   
 
 
 // VIDEO EMBED //
